Opened 16 years ago

Closed 14 years ago

#2883 closed bug (fixed)

Can't redo an undone "duplicate"

Reported by: humdinger Owned by: axeld
Priority: normal Milestone: R1
Component: Applications/Tracker Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

This is hrev28234.

Open a folder, select a file and duplicate it (ALT+D). Undo that with ALT+Z. Try to redo it with ALT+SHIFT+Z.

I get the the error: "Sorry, there is not enough free space on the destination volume to copy the selection."

Change History (1)

comment:1 by stpere, 14 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev42328.

Note: See TracTickets for help on using tickets.