The destination directory wasn't stored in the UndoRedo record in the case of a duplication operation, causing issues when trying to redo an undone duplication (couldn't find the volume correctly).

Fixes #2883.


git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@42328 a95241bf-73f2-0310-859d-f6bbb57e9c96